# WorkQ.ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md
.claude/skills/: requestqueue_install.md
.claude/skills/requestqueue-install/: SKILL.md
apis/: pyproject.toml
apis/custom_resources/: service_user.py
apis/handlers/: delete_id.py  get_id.py  get_status.py  post_id.py  pre_signup.py  put_id.py
apis/shared/: auth.py  ddb.py  models.py  responses.py
apis/tests/: test_post_id.py  test_pre_signup.py  test_put_id.py
config/: README.md  prompt_parts.yaml
infra/: template.yaml
local/: pyproject.toml
local/monitor/: __main__.py  poller.py  stuck_detector.py
local/shared/: api_client.py  auth.py  config.py  log.py
local/tests/: test_claude_runner.py  test_prompt.py  test_stuck_detector.py
prompts/: prompt_parts.yaml  reqv1.md
scripts/: aws_setup_config.sh  bootstrap_local.sh  derive_app_config.py  lib_env.sh  publish.sh  refresh_creds.sh  validate_prompt_parts.py  whitelist_user.sh
ui/webapp/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/webapp/src/: App.tsx  index.css  types.ts
ui/webapp/src/api/: client.ts
ui/webapp/src/auth/: AuthContext.tsx  cognito.ts
ui/webapp/src/components/: ConflictDialog.tsx  LoginScreen.tsx  MainScreen.tsx  MarkdownEditor.tsx  NewRequestDialog.tsx  RequestDetail.tsx  RequestRow.tsx  StatusBadge.tsx  SummaryCounts.tsx
ui/webapp/src/components/ui/: accordion.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx
ui/webapp/src/config/: ConfigContext.tsx  runtime.ts
ui/webapp/src/hooks/: useAutoRefresh.ts
